--- a/ss.html
+++ b/ss.html
@@ -183,6 +183,12 @@
     .visualizer div:nth-child(4) { animation-delay: 0.6s; }
     .visualizer div:nth-child(5) { animation-delay: 0.8s; }
 
+    .sidebar, .main, .player {
+  box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+  border-radius: 12px;
+}
+
+
     @keyframes waveAnimation {
       0%, 100% { height: 20px; }
       50% { height: 40px; }
@@ -201,6 +207,75 @@
       z-index: 1000;
       box-shadow: 0 0 10px rgba(0, 255, 204, 2);
     }
+
+    /* Responsive Design Enhancements */
+@media (max-width: 1024px) {
+  .sidebar {
+    width: 220px;
+    padding: 15px;
+  }
+  .song {
+    width: 45%;
+  }
+  .player {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+  .player .controls, .player input {
+    width: 100%;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+  .sidebar {
+    width: 100%;
+    flex-direction: row;
+    overflow-x: auto;
+    border-right: none;
+    border-bottom: 2px solid var(--border-color);
+    padding: 10px;
+    justify-content: space-around;
+  }
+  .sidebar h2 {
+    display: none;
+  }
+  .sidebar a {
+    font-size: 14px;
+    margin: 0 10px;
+  }
+  .main {
+    padding: 15px;
+  }
+  .song {
+    width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  .search-bar {
+    font-size: 14px;
+    padding: 10px;
+  }
+  .song-title, .song-artist {
+    font-size: 12px;
+  }
+  .controls i {
+    font-size: 18px;
+    margin: 0 6px;
+  }
+  .volume, .progress {
+    width: 100%;
+  }
+  .player {
+    padding: 10px;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -208,13 +283,10 @@
     <div class="sidebar">
       <h2>MegaPlayer</h2>
       <a href="#"><i class="fas fa-home"></i>&nbsp; Home</a>
-      <a href="#"><i class="fas fa-compass"></i>&nbsp; Browse</a>
-      <a href="#"><i class="fas fa-music"></i>&nbsp; Your Library</a>
-      <a href="#"><i class="fas fa-heart"></i>&nbsp; Liked Songs</a>
       <a href="#"><i class="fas fa-list"></i>&nbsp; Playlists</a>
       <a href="#"><i class="fas fa-cog"></i>&nbsp; Settings</a>
       <div class="theme-toggle" onclick="toggleTheme()">
-        <i class="fas fa-adjust"></i>&nbsp; Toggle Bark Mode
+        <i class="fas fa-adjust"></i>&nbsp;Bark Mode
       </div>
     </div>
     <div class="main">
